[fix]: [SRM-13549]: BE Changes for supporting applied threshold Ids, for UX Improvements (#42597)